[DevTools] Set skip_in_browser=true for synthethic keyboard events.

We don't have native event (which is used in browser) and we only intend
these events to be processed by web contents anyway.

BUG=627221

Review-Url: https://codereview.chromium.org/2143113003
Cr-Commit-Position: refs/heads/master@{#404984}

Former-commit-id: 204daf38980716774d1d1e960ff803e6d317665e